Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -54,8 +54,7 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 
 |3|4|5|6|
 |-|-|-|-|
-|[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**PHP**]({{ site.baseurl_root }}/images/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) |[![**Python**]({{ site.baseurl_root }}/images/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)
-[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
+|[![**Java**]({{ site.baseurl_root }}/images/SDKs/04-sdk-java.png)](https://github.com/DeveloperCielo/API-3.0-Java)|[![**PHP**]({{ site.baseurl_root }}/images/SDKs/07-sdk-php.png)](https://github.com/DeveloperCielo/API-3.0-PHP) |[![**Python**]({{ site.baseurl_root }}/images/SDKs/08-sdk-python.png)](https://github.com/DeveloperCielo/API-3.0-Python)|[![**Ruby**]({{ site.baseurl_root }}/images/SDKs/09-sdk-ruby.png)](https://github.com/DeveloperCielo/API-3.0-Ruby)|
 
 [![**iOS**]({{ site.baseurl_root }}/images/SDKs/01-sdk-ios.png)](https://github.com/DeveloperCielo/API-3.0-iOS)
 [![**Android**]({{ site.baseurl_root }}/images/SDKs/01-sdk-android.png)](https://github.com/DeveloperCielo/API-3.0-Android)
