Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md' via CloudCannon

--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -37,7 +37,7 @@ A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório ofici
 
 # SDKs Webservice 1.5
 
-# base
+# SDKs GITHUB
 
 |SDK                                                               |
 |------------------------------------------------------------------|
