--- a/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
+++ b/_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-sdks-3.0.md
@@ -6,7 +6,7 @@ toc_footers: true
 categories: tutorial
 sort_order: 5
 tags:
-  - API e-Commerce Cielo
+  - Documentos Adicionais
 ---
 
 # SDKs Api e-Commerce Cielo
