Updated '_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
@@ -145,8 +145,10 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 * **POS** = Posição inicial do Campo no Arquivo;
 * **TAM** = Tamanho do Campo
 * **FOR** = Formatos válidos para o conteúdo do campo, sendo:
-    * **N** = Numérico
-    * **X** = Alfanumérico
+
+> **N** = Numérico
+
+> **X** = Alfanumérico
 
 ## Registro Detalhe
 
@@ -202,8 +204,11 @@ O cancelamento de qualquer transação só será aceito se houver saldo disponí
 * Para cancelamentos de vendas, os campos 004, 005, 006, 007 e 008 da linha de Detalhe devem ser preenchidos com as mesmas informações da venda, respeitando o horário e data de Autorização e Captura do Brasil.
 * É permitido o cancelamento Total ou Parcial da venda.
 * Cancelamentos parciais podem ser enviados até o valor total da transação, obedecendo as seguintes condições:
-    * **Transações a Vista**: podem ser enviados mais de um cancelamento parcial da mesma transação no mesmo dia, desde que sejam enviadas em Lotes diferentes.
-    * **Transações Parcelado Loja**: não permite cancelamento parcial da mesma transação no mesmo dia.
+
+> **Transações a Vista**: podem ser enviados mais de um cancelamento parcial da mesma transação no mesmo dia, desde que sejam enviadas em Lotes diferentes.
+
+> **Transações Parcelado Loja**: não permite cancelamento parcial da mesma transação no mesmo dia.
+
 * Cancelamentos de transações autorizadas por meio do canal EDI, só podem ser solicitados após o recebimento do arquivo retorno da transação de autorização (até 48 horas após o envio do arquivo).
 
 # Arquivos de Remessa e Retorno de Cancelamentos
