Updated '_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
@@ -163,9 +163,9 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 |007|Valor da venda *|44|15|N|Venda à vista => valor da venda. Venda parcelada => valor total das parcelas + valor entrada + taxa embarque|Campo Obrigatório - Tem que respeitar a “opção de venda” - Não pode ser menor zero/não numérico|
 |008|Quantidade de parcelas|59|3|N|Venda à vista => preencher com zeros. Venda parcelada => quantidade de parcelas|Campo Obrigatório - Tem que respeitar a “opção de venda” - Não pode ser menor zero\ não numérico.|
 |009|Valor Financiado *|62|15|N|Venda à vista => preencher com zeros. Venda parcelada => Valor original financiado|Não pode ser menor zero \ não numérico|
-|010|Valor Entrada *|77|15|N|Venda à vista => preencher com zeros. Venda parcelada => Valor da entrada. **Apenas Cias. Aéreas**|Não pode ser menor zero \ não numérico|
-|011|Taxa Embarque *|92|15|N|**Preencher apenas para Cias. Aéras**. Caso contrário preencher com zeros|Não pode ser menor zero \ não numérico|
-|012|Valor parcela *|107|15|N|Venda à vista => preencher com zeros. Venda parcelada => Valor parcela (sem arredondar)|Campo Obrigatório. Não pode ser menoo que 0 ou não numérico|
+|010|Valor Entrada|77|15|N|Venda à vista => preencher com zeros. Venda parcelada => Valor da entrada. **Apenas Cias. Aéreas**|Não pode ser menor zero \ não numérico|
+|011|Taxa Embarque|92|15|N|**Preencher apenas para Cias. Aéras**. Caso contrário preencher com zeros|Não pode ser menor zero \ não numérico|
+|012|Valor parcela|107|15|N|Venda à vista => preencher com zeros. Venda parcelada => Valor parcela (sem arredondar)|Campo Obrigatório. Não pode ser menoo que 0 ou não numérico|
 |013|No do resumo de operações (RO)|122|7|N|Igual ao No do RO informado no registro header|Obrigatório o uso do mesmo número do header|
 |014|Não utilizar|129|3|N|Constante = zeros|Não lido|
 |015|Número do estabelecimento|132|10|N|N.o da maquineta (contrato CIELO)|Deverá ser o mesmo do header|
