Updated '_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
@@ -54,11 +54,11 @@ A solução de captura EDI conta com uma Ilha de Atendimento para suporte, respo
 
 ![Bandeiras](images/edi-bandeiras.png)
 
-|Produto/Serviço|Autorização em lote|Cancelamento em lote|IATA Submissão Base 2|IATA Cancelamento|
-|---------------|-------------------|--------------------|---------------------|---------------|
-|Débito|Não|Sim|Não|Sim*|
-|Crédito a Vista|Sim|Sim|Sim|Sim|
-|Parcelado Loja|Sim|Sim|Sim|Sim|
+| Produto/Serviço | Autorização em lote | Cancelamento em lote | IATA Submissão Base 2 | IATA Cancelamento |
+|-----------------|---------------------|----------------------|-----------------------|-------------------|
+| Débito          | Não                 | Sim                  | Não                   | Sim*              |
+| Crédito a Vista | Sim                 | Sim                  | Sim                   | Sim               |
+| Parcelado Loja  | Sim                 | Sim                  | Sim                   | Sim               |
 
 ### Exceções
 
@@ -126,19 +126,19 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 
 ## Registro Header
 
-|SEQ|DESCRIÇÃO|POS|TAM|FOR|COMENTÁRIOS|Consistências EDI|
-|---|---------|---|---|---|-----------|-----------------|
-|001|Tipo de registro|1|2|N|Identifica o tipo de registro header|Obrigatoriamente igual a “00”|
-|002|Data do depósito|3|8|N|Data de geração e transmissão do movimento|Campo Obrigatório Formato deve ser DDMMAAAA|
-|003|Número do resumo de operações (RO)|11|7|N|Informado pelo estabelecimento, identifica o lote de transações|Campo Obrigatório. Não enviar o mesmo lote num período de 30 dias do envio anterior|
-|004|Reservado para o estabelecimento|18|10|X|Uso exclusivo do estabelecimento, não é utilizado pela CIELO|Nenhuma verificação|
-|005|Não utilizar|28|3|N|Constante = Zeros|Não lido|
-|006|Número do estabelecimento Cielo|31|10|N|N.o da maquineta (contrato CIELO)|Campo Obrigatório. Rejeição se < 0 ou não numérico|
-|007|Código da moeda|41|3|N|“986” - R$, “840” - US$|Rejeitado se diferente de 986 ou 840|
-|008|Indicador do processo|44|1|X|“P” – Produção|Rejeita se diferente de “P”|
-|009|Indicador de venda|45|1|X|“V” – venda|Campo Obrigatório|
-|010|Indicação de estabelecimento especial|46|01|X|Constante = brancos|Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.|
-|011|Não utilizar|47|204|X|Constante = brancos|não lido|
+| SEQ | DESCRIÇÃO                             | POS | TAM | FOR | COMENTÁRIOS                                                     | Consistências EDI                                                                   |
+|-----|---------------------------------------|-----|-----|-----|-----------------------------------------------------------------|-------------------------------------------------------------------------------------|
+| 001 | Tipo de registro                      | 1   | 2   | N   | Identifica o tipo de registro header                            | Obrigatoriamente igual a “00”                                                       |
+| 002 | Data do depósito                      | 3   | 8   | N   | Data de geração e transmissão do movimento                      | Campo Obrigatório Formato deve ser DDMMAAAA                                         |
+| 003 | Número do resumo de operações (RO)    | 11  | 7   | N   | Informado pelo estabelecimento, identifica o lote de transações | Campo Obrigatório. Não enviar o mesmo lote num período de 30 dias do envio anterior |
+| 004 | Reservado para o estabelecimento      | 18  | 10  | X   | Uso exclusivo do estabelecimento, não é utilizado pela CIELO    | Nenhuma verificação                                                                 |
+| 005 | Não utilizar                          | 28  | 3   | N   | Constante = Zeros                                               | Não lido                                                                            |
+| 006 | Número do estabelecimento Cielo       | 31  | 10  | N   | N.o da maquineta (contrato CIELO)                               | Campo Obrigatório. Rejeição se < 0 ou não numérico                                  |
+| 007 | Código da moeda                       | 41  | 3   | N   | “986” - R$, “840” - US$                                         | Rejeitado se diferente de 986 ou 840                                                |
+| 008 | Indicador do processo                 | 44  | 1   | X   | “P” – Produção                                                  | Rejeita se diferente de “P”                                                         |
+| 009 | Indicador de venda                    | 45  | 1   | X   | “V” – venda                                                     | Campo Obrigatório                                                                   |
+| 010 | Indicação de estabelecimento especial | 46  | 01  | X   | Constante = brancos                                             | Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.  |
+| 011 | Não utilizar                          | 47  | 204 | X   | Constante = brancos                                             | não lido                                                                            |
 
 ### Legenda
 
@@ -146,9 +146,7 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 * **TAM** = Tamanho do Campo
 * **FOR** = Formatos válidos para o conteúdo do campo, sendo:
 
-> **N** = Numérico
-
-> **X** = Alfanumérico
+> **N** = Numérico / **X** = Alfanumérico
 
 ## Registro Detalhe
 
@@ -184,15 +182,15 @@ Layout de Arquivos para Remessa e/ou Retorno de Vendas
 
 ## Registro Trailler
 
-|SEQ|DESCRIÇÃO|POS|TAM|FOR|COMENTÁRIOS|Consistências EDI|
-|---|---------|---|---|---|-----------|-----------------|
-|001|Tipo de registro|1|2|N|Identifica o tipo de registro detalhe trailler|Obrigatório o uso do código “99”|
-|002|Quantidade de registros|3|7|N|Inclusive header e trailler|Rejeição se  menor  que 0 ou não numérico|
-|003|Valor total bruto (*)|10|15|N|Informado pelo estabelecimento – Valor total do lote, somatória do campo 007 do registro detalhe.|Rejeição se menor que 0 ou não numérico. Rejeita se valor diferente da somatória do campo 07|
-|004|Valor total aceito (*)|25|15|N|Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total aceito.|Sem verificações|
-|005|Valor totalliquido (*)|40|15|N|Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total líquido.|Sem verificações|
-|006|Data prevista de crédito|55|8|N|Na remessa preencher com zeros; No retorno, será formatado pela Cielo com a data prevista de pagamento.|Sem verificações|
-|007|Não utilizar|63|188|X|Constante = brancos|Não lido|
+| SEQ | DESCRIÇÃO                | POS | TAM | FOR | COMENTÁRIOS                                                                                             | Consistências EDI                                                                            |
+|-----|--------------------------|-----|-----|-----|---------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|
+| 001 | Tipo de registro         | 1   | 2   | N   | Identifica o tipo de registro detalhe trailler                                                          | Obrigatório o uso do código “99”                                                             |
+| 002 | Quantidade de registros  | 3   | 7   | N   | Inclusive header e trailler                                                                             | Rejeição se  menor  que 0 ou não numérico                                                    |
+| 003 | Valor total bruto (*)    | 10  | 15  | N   | Informado pelo estabelecimento – Valor total do lote, somatória do campo 007 do registro detalhe.       | Rejeição se menor que 0 ou não numérico. Rejeita se valor diferente da somatória do campo 07 |
+| 004 | Valor total aceito (*)   | 25  | 15  | N   | Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total aceito.         | Sem verificações                                                                             |
+| 005 | Valor totalliquido (*)   | 40  | 15  | N   | Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total líquido.        | Sem verificações                                                                             |
+| 006 | Data prevista de crédito | 55  | 8   | N   | Na remessa preencher com zeros; No retorno, será formatado pela Cielo com a data prevista de pagamento. | Sem verificações                                                                             |
+| 007 | Não utilizar             | 63  | 188 | X   | Constante = brancos                                                                                     | Não lido                                                                                     |
 
 <aside class="notice">( * ) - Estes campos devem ser considerados com 2 (duas) casas decimais, sem vírgulas, pontos ou qualquer outro caractere para separar números.</aside>
 
@@ -205,9 +203,7 @@ O cancelamento de qualquer transação só será aceito se houver saldo disponí
 * É permitido o cancelamento Total ou Parcial da venda.
 * Cancelamentos parciais podem ser enviados até o valor total da transação, obedecendo as seguintes condições:
 
-> **Transações a Vista**: podem ser enviados mais de um cancelamento parcial da mesma transação no mesmo dia, desde que sejam enviadas em Lotes diferentes.
-
-> **Transações Parcelado Loja**: não permite cancelamento parcial da mesma transação no mesmo dia.
+> **Transações a Vista**: podem ser enviados mais de um cancelamento parcial da mesma transação no mesmo dia, desde que sejam enviadas em Lotes diferentes / **Transações Parcelado Loja**: não permite cancelamento parcial da mesma transação no mesmo dia.
 
 * Cancelamentos de transações autorizadas por meio do canal EDI, só podem ser solicitados após o recebimento do arquivo retorno da transação de autorização (até 48 horas após o envio do arquivo).
 
@@ -225,19 +221,19 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 
 ## Registro Header
 
-|SEQ|DESCRIÇÃO|POS|TAM|FOR|COMENTÁRIOS|Consistências EDI|
-|---|---------|---|---|---|-----------|-----------------|
-|001|Tipo de registro|1|2|N|Identifica o tipo de registro header|Obrigatoriamente deve ser “00”|
-|002|Data do depósito|3|8|N|Data de geração e transmissão do movimento|Campo Obrigatório. Formato deve ser DDMMAAAA|
-|003|Número do resumo de operações (RO)|11|7|N|Informado pelo estabelecimento, identifica o lote de transações.|Campo Obrigatório. Não enviar o mesmo lote num período de 30 dias do envio anterior|
-|004|Reservado para o estabelecimento|18|10|X|Uso exclusivo do estabelecimento, não é utilizado pela CIELO|Nenhuma verificação|
-|005|Não utilizar|28|3|N|Constante = Zeros|Não lido|
-|006|Número do estabelecimento Cielo|31|10|N|N.º da maquineta (contrato CIELO)|Campo Obrigatório. Rejeitado se < ou = 0 ou não numérico|
-|007|Código da moeda|41|3|N|“986” - R$. “840” - US$| Rejeitado se diferente de 986 ou 840|
-|008|Indicador do processo|44|1|X|“P” – Produção|Rejeita se diferente de “P”|
-|009|Indicador de cancelamento de vendas|45|1|X|“C” – cancelamento de venda Credito à vista. “P” – cancelamento de venda Parcelado Loja. “D” – cancelamento de venda Débito| Se campo diferente de “C” ou “P” ou “D” o lote será recusado.|
-|010|Indicação de estabelecimento especial|46|01|X|Constante = brancos|Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.|
-|011|Não utilizar|47|204|X|Constante = brancos|Não lido|
+| SEQ | DESCRIÇÃO                             | POS | TAM | FOR | COMENTÁRIOS                                                                                                                 | Consistências EDI                                                                   |
+|-----|---------------------------------------|-----|-----|-----|-----------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------|
+| 001 | Tipo de registro                      | 1   | 2   | N   | Identifica o tipo de registro header                                                                                        | Obrigatoriamente deve ser “00”                                                      |
+| 002 | Data do depósito                      | 3   | 8   | N   | Data de geração e transmissão do movimento                                                                                  | Campo Obrigatório. Formato deve ser DDMMAAAA                                        |
+| 003 | Número do resumo de operações (RO)    | 11  | 7   | N   | Informado pelo estabelecimento, identifica o lote de transações.                                                            | Campo Obrigatório. Não enviar o mesmo lote num período de 30 dias do envio anterior |
+| 004 | Reservado para o estabelecimento      | 18  | 10  | X   | Uso exclusivo do estabelecimento, não é utilizado pela CIELO                                                                | Nenhuma verificação                                                                 |
+| 005 | Não utilizar                          | 28  | 3   | N   | Constante = Zeros                                                                                                           | Não lido                                                                            |
+| 006 | Número do estabelecimento Cielo       | 31  | 10  | N   | N.º da maquineta (contrato CIELO)                                                                                           | Campo Obrigatório. Rejeitado se < ou = 0 ou não numérico                            |
+| 007 | Código da moeda                       | 41  | 3   | N   | “986” - R$. “840” - US$                                                                                                     | Rejeitado se diferente de 986 ou 840                                                |
+| 008 | Indicador do processo                 | 44  | 1   | X   | “P” – Produção                                                                                                              | Rejeita se diferente de “P”                                                         |
+| 009 | Indicador de cancelamento de vendas   | 45  | 1   | X   | “C” – cancelamento de venda Credito à vista. “P” – cancelamento de venda Parcelado Loja. “D” – cancelamento de venda Débito | Se campo diferente de “C” ou “P” ou “D” o lote será recusado.                       |
+| 010 | Indicação de estabelecimento especial | 46  | 01  | X   | Constante = brancos                                                                                                         | Somente deverá ser diferente de branco caso a equipe de sistemas assim determinar.  |
+| 011 | Não utilizar                          | 47  | 204 | X   | Constante = brancos                                                                                                         | Não lido                                                                            |
 
 ## Registro Detalhe
 
@@ -252,8 +248,8 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 |007|Valor da venda *|44|15|N|Venda vista => valor venda, Venda parcelada => somatória das parcelas e valor de entrada.|Campo Obrigatório. Tem que respeitar a “opção de venda”|
 |008|Quantidade de parcelas|59|3|N|Venda à vista => preencher com zeros, Venda parcelada => quantidade de parcelas|Campo Obrigatório. Tem que respeitar a “opção de venda”|
 |009|Valor financiado *|62|15|N|Venda à vista => preencher com zeros, Venda parcelada => Valor original financiado|Campo Obrigatório. Tem que respeitar a “opção de venda”|
-|010|Valor entrada *|77|15|N|Venda à vista => preencher com zeros, Venda parcelada => Valor da entrada. **Apenas Cias. Aéreas**|Campo Obrigatório. Tem que respeitar a “opção de venda”|
-|011|Valor Taxa de Embarque *|92|15|N|Preencher **apenas para Cias. Aéras**. Caso contrário preencher com zeros|Rejeitado se diferente de zero ou não numérico|
+|010|Valor entrada |77|15|N|Venda à vista => preencher com zeros, Venda parcelada => Valor da entrada. **Apenas Cias. Aéreas**|Campo Obrigatório. Tem que respeitar a “opção de venda”|
+|011|Valor Taxa de Embarque |92|15|N|Preencher **apenas para Cias. Aéras**. Caso contrário preencher com zeros|Rejeitado se diferente de zero ou não numérico|
 |012|Valor parcela *|107|15|N|Venda à vista => preencher com zeros, Venda parcelada => Valor da parcela (não fazer arredondamento)|Campo Obrigatório. Tem que respeitar a “opção de venda“|
 |013|Nº do resumo de operações (RO)|122|7|N|Igual ao Nº do RO informado no registro header|Obrigatório o uso do mesmo número do header|
 |014|Não utilizar|129|3|N|Constante = zeros|Não lido|
@@ -273,15 +269,15 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 
 ## Registro Trailler
 
-|SEQ|DESCRIÇÃO|POS|TAM|FOR|COMENTÁRIOS|Consistências EDI|
-|---|---------|---|---|---|-----------|-----------------|
-|001|Tipo de registro|1|2|N|Identifica o tipo de registro detalhe trailler|Obrigatório o uso do código “99”|
-|002|Quantidade de registros|3|7|N|Inclusive header e trailler|Rejeição se menor que 0 ou não numérico|
-|003|Valor total bruto (*)|10|15|N|Informado pelo estabelecimento – valor total do lote, somatória do campo 007 do registro detalhe|Rejeição se menor que 0 ou não numérico. Rejeita se valor diferente da somatória do campo 07|
-|004|Valor total aceito (*)|25|15|N|Na remessa preencher com zeros; No retorno, será formatado na Cielo com valor total aceito.|Sem verificações|
-|005|Valor total liquido (*)|40|15|N|Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total líquido.|Sem verificações|
-|006|Data prevista de crédito|55|8|N| Na remessa preencher com zeros; No retorno, será formatado pela Cielo com a data prevista de pagamento.|Sem verificações|
-|007|Não utilizar|63|188|X|Constante = brancos|Não lido|
+| SEQ | DESCRIÇÃO                | POS | TAM | FOR | COMENTÁRIOS                                                                                             | Consistências EDI                                                                            |
+|-----|--------------------------|-----|-----|-----|---------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|
+| 001 | Tipo de registro         | 1   | 2   | N   | Identifica o tipo de registro detalhe trailler                                                          | Obrigatório o uso do código “99”                                                             |
+| 002 | Quantidade de registros  | 3   | 7   | N   | Inclusive header e trailler                                                                             | Rejeição se menor que 0 ou não numérico                                                      |
+| 003 | Valor total bruto (*)    | 10  | 15  | N   | Informado pelo estabelecimento – valor total do lote, somatória do campo 007 do registro detalhe        | Rejeição se menor que 0 ou não numérico. Rejeita se valor diferente da somatória do campo 07 |
+| 004 | Valor total aceito (*)   | 25  | 15  | N   | Na remessa preencher com zeros; No retorno, será formatado na Cielo com valor total aceito.             | Sem verificações                                                                             |
+| 005 | Valor total liquido (*)  | 40  | 15  | N   | Na remessa preencher com zeros; No retorno, será formatado pela Cielo com o valor total líquido.        | Sem verificações                                                                             |
+| 006 | Data prevista de crédito | 55  | 8   | N   | Na remessa preencher com zeros; No retorno, será formatado pela Cielo com a data prevista de pagamento. | Sem verificações                                                                             |
+| 007 | Não utilizar             | 63  | 188 | X   | Constante = brancos                                                                                     | Não lido                                                                                     |
 
 <aside class="notice">( * ) - Estes campos devem ser considerados com 2 (duas) casas decimais, sem vírgulas, pontos ou qualquer outro caractere para separar números.</aside>
 
@@ -289,55 +285,55 @@ Layout de Arquivos de Remessa e Retorno de Cancelamentos ( Não PCI ) utilizado 
 
 ## ANEXO I - Tabela de Códigos de Retorno
 
-|Código de Rejeição|Descritivo da Ocorrência|
-|------------------|------------------------|
-|00|Transação OK (Transação Aceita)|
-|01|Erro no arquivo|
-|02|Código de autorização inválido|
-|03|Estabelecimento inválido|
-|04|Lote misturado|
-|05|Número de parcelas inválido|
-|06|Diferença de valor no RO|
-|07|Número do RO inválido (registro BH)|
-|08|Valor de entrada inválido|
-|09|Valor da taxa de embarque inválido|
-|10|Valor da parcela inválido|
-|11|Código de transação inválido|
-|12|Transação inválida|
-|13|Valor inválido|
-|14|Não aplicável|
-|15|Valor do cancelamento inválido|
-|16|Transação original não localizada (para cancelamento)|
-|17|Nº de itens informados no RO não compatível com os CV’s|
-|18|Número de referência inválido|
-|20|Cancelamento para parcelado de transação já cancelada|
-|21|Valor do cancelamento maior que o valor da venda|
-|22|Valor do cancelamento maior que o permitido (alçada)|
-|23|Número do RO original inválido (registro I2)|
-|42|Cartão cancelado|
-|54|Não é permitido cancelamento parcial de um plano parcelado que está sendo contestado pelo portador.|
-|56|Tipo de plano de cartão inválido|
-|59|Tipo cartão inválido 60 Data inválida|
-|71|Transação rejeitada pelo banco emissor|
-|72|Transação rejeitada pelo banco emissor|
-|73|Cartão com problema - reter o cartão|
-|74|Autorização negada|
-|75|Erro|
-|76|Transação rejeitada pelo banco emissor|
-|77|Erro de sintaxe - refaça a transação|
-|78|Não foi encontrada autorização no emissor|
-|79|Cartão cancelado|
-|80|Cartão cancelado|
-|81|Fundos insuficientes|
-|82|Cartão vencido ou data do vencimento errada|
-|87|Cartão não permitido|
-|88|Excedeu o número de transações no período|
-|89|Mensagem difere da mensagem original|
-|92|Banco emissor sem comunicação|
-|93|Cancelamento com mais de 365 dias|
-|94|Duplicidade de linhas aéreas|
-|95|Sem saldo em aberto|
-|99|Outros motivos|
+| Código de Rejeição | Descritivo da Ocorrência                                                                            |
+|--------------------|-----------------------------------------------------------------------------------------------------|
+| 00                 | Transação OK (Transação Aceita)                                                                     |
+| 01                 | Erro no arquivo                                                                                     |
+| 02                 | Código de autorização inválido                                                                      |
+| 03                 | Estabelecimento inválido                                                                            |
+| 04                 | Lote misturado                                                                                      |
+| 05                 | Número de parcelas inválido                                                                         |
+| 06                 | Diferença de valor no RO                                                                            |
+| 07                 | Número do RO inválido (registro BH)                                                                 |
+| 08                 | Valor de entrada inválido                                                                           |
+| 09                 | Valor da taxa de embarque inválido                                                                  |
+| 10                 | Valor da parcela inválido                                                                           |
+| 11                 | Código de transação inválido                                                                        |
+| 12                 | Transação inválida                                                                                  |
+| 13                 | Valor inválido                                                                                      |
+| 14                 | Não aplicável                                                                                       |
+| 15                 | Valor do cancelamento inválido                                                                      |
+| 16                 | Transação original não localizada (para cancelamento)                                               |
+| 17                 | Nº de itens informados no RO não compatível com os CV’s                                             |
+| 18                 | Número de referência inválido                                                                       |
+| 20                 | Cancelamento para parcelado de transação já cancelada                                               |
+| 21                 | Valor do cancelamento maior que o valor da venda                                                    |
+| 22                 | Valor do cancelamento maior que o permitido (alçada)                                                |
+| 23                 | Número do RO original inválido (registro I2)                                                        |
+| 42                 | Cartão cancelado                                                                                    |
+| 54                 | Não é permitido cancelamento parcial de um plano parcelado que está sendo contestado pelo portador. |
+| 56                 | Tipo de plano de cartão inválido                                                                    |
+| 59                 | Tipo cartão inválido 60 Data inválida                                                               |
+| 71                 | Transação rejeitada pelo banco emissor                                                              |
+| 72                 | Transação rejeitada pelo banco emissor                                                              |
+| 73                 | Cartão com problema - reter o cartão                                                                |
+| 74                 | Autorização negada                                                                                  |
+| 75                 | Erro                                                                                                |
+| 76                 | Transação rejeitada pelo banco emissor                                                              |
+| 77                 | Erro de sintaxe - refaça a transação                                                                |
+| 78                 | Não foi encontrada autorização no emissor                                                           |
+| 79                 | Cartão cancelado                                                                                    |
+| 80                 | Cartão cancelado                                                                                    |
+| 81                 | Fundos insuficientes                                                                                |
+| 82                 | Cartão vencido ou data do vencimento errada                                                         |
+| 87                 | Cartão não permitido                                                                                |
+| 88                 | Excedeu o número de transações no período                                                           |
+| 89                 | Mensagem difere da mensagem original                                                                |
+| 92                 | Banco emissor sem comunicação                                                                       |
+| 93                 | Cancelamento com mais de 365 dias                                                                   |
+| 94                 | Duplicidade de linhas aéreas                                                                        |
+| 95                 | Sem saldo em aberto                                                                                 |
+| 99                 | Outros motivos                                                                                      |
 
 ## ANEXO II – Detalhamento do erro para Status Venda informado no campo 23
 
