Updated '_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md' via CloudCannon

--- a/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
+++ b/_i18n/pt/_posts/documentos-adicionais/2017-11-30-edi.md
@@ -40,7 +40,7 @@ Para utilizar o canal de captura EDI, são necessários quatro passos:
 3. Homologação: um arquivo teste pode ser enviado à Ilha de Atendimento EDI para validação da estrutura do arquivo;
 4. Produção: enviar o arquivo para processamento.
 
-![Passos](images/edi-passos.png)
+![]({{ site.baseurl_root }}/images/edi-passos.png)
 
 ## Suporte Técnico
 
@@ -52,7 +52,7 @@ A solução de captura EDI conta com uma Ilha de Atendimento para suporte, respo
 
 ## Produtos e Bandeiras habilitados para o CANAL EDI:
 
-![Bandeiras](images/edi-bandeiras.png)
+![]({{ site.baseurl_root }}/images/edi-bandeiras.png)
 
 | Produto/Serviço | Autorização em lote | Cancelamento em lote | IATA Submissão Base 2 | IATA Cancelamento |
 |-----------------|---------------------|----------------------|-----------------------|-------------------|
